# jupyter-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  event.rs  main.rs
src/input/: handler.rs  mod.rs  vim.rs
src/kernel/: client.rs  manager.rs
src/notebook/: model.rs
src/ui/: cell.rs  highlight.rs  layout.rs  mod.rs  output.rs  statusbar.rs
