[package]
name = "jupyter_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Jupyter protocol + kernel management
runtimelib = { version = "1.0.0", features = ["tokio-runtime"] }
jupyter-protocol = "1.0.0"
nbformat = "1.0.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
ratatui-image = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
ansi-to-tui = "7"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
tui-markdown = "0.3"
ratatui-core = "0.1"
